--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "@vladmandic/human": "^3.3.5",
+    "canvas": "^3.1.2",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "node-rtsp-stream": "^0.0.9",
     "nodemon": "^3.1.10",
     "rtsp-ffmpeg": "^0.0.19",
