--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "nodemon -r dotenv/config index.js"
   },
   "author": "Douglas Oliveira",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "@tensorflow/tfjs-node": "^4.22.0",
     "@vladmandic/human": "^3.3.5",
     "canvas": "^3.1.2",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
