--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config index.js"
+    "start": "nodemon -r dotenv/config index.js  --ignore 'debug/*'"
   },
   "author": "Douglas Oliveira",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@vladmandic/human": "^3.3.5",
-    "canvas": "^3.1.2",
+    "canvas": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "node-rtsp-stream": "^0.0.9",
     "nodemon": "^3.1.10",
+    "onnxruntime-node": "^1.23.2",
     "rtsp-ffmpeg": "^0.0.19",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
