--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
+    "mongoose": "^8.20.1",
     "node-rtsp-stream": "^0.0.9",
     "nodemon": "^3.1.10",
     "onnxruntime-node": "^1.23.2",
