--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow/tfjs-node": "^4.22.0",
     "@vladmandic/human": "^3.3.5",
+    "axios": "^1.13.2",
     "canvas": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
