--- a/client-desktop/package.json
+++ b/client-desktop/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^39.2.3"
+  },
+  "dependencies": {
+    "express": "^5.1.0",
+    "ffmpeg-static": "^5.3.0"
   }
 }
